--- a/renhongl-blog/source/gallery/index.html
+++ b/renhongl-blog/source/gallery/index.html
@@ -1,201 +1,54 @@
-<!--::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::
-  jquery.mb.components
-
-  file: demo-2.html
-  last modified: 10/25/18 8:00 PM
-  Version:  {{ version }}
-  Build:  {{ buildnum }}
-
-  Open Lab s.r.l., Florence - Italy
-  email:  matteo@open-lab.com
-  blog: 	http://pupunzi.open-lab.com
-  site: 	http://pupunzi.com
-  	http://open-lab.com
-
-  Licences: MIT, GPL
-  http://www.opensource.org/licenses/mit-license.php
-  http://www.gnu.org/licenses/gpl.html
-
-  Copyright (c) 2001-2018. Matteo Bicocchi (Pupunzi)
-  :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::-->
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-  <meta name="description" content="">
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="cleartype" content="on">
-
-
-  <title>jquery.mb.gallery</title>
-  <link href='http://fonts.googleapis.com/css?family=Lekton|Lobster' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="./dist/css/jquery.mb.gallery.min.css?_v=1.3.1" />
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-  <script src="./dist/jquery.mb.gallery.js?_v=1.3.1"></script>
-
-  <style>
-    body,
-    html {
-      position: relative;
-      min-width: 100%;
-      min-height: 100%;
-      margin: 0;
-      padding: 0;
-      /*background: linear-gradient(135deg, #ffaa02 0%,#febf01 100%); */
-      /* W3C */
-      background: linear-gradient(135deg, #343b40 0%, #494e51 100%);
-      font-family: Verdana, Arial, Helvetica, sans-serif;
-    }
-
-    #wrapper {
-      padding: 20px;
-      max-width: 1024px;
-      width: 100%;
-      margin: auto;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 60px;
-      font-family: 'Lobster', cursive;
-    }
-
-    @media (max-width: 500px) {
-      h1 {
-        font-size: 30px;
-      }
-    }
-
-    label {
-      color: white;
-    }
-
-    /*custom overlay gradient */
-
-    .tg-placeHolder {
-      /*background: linear-gradient(135deg, #ffffff 0%, #cccccc 100%);*/
-      background: #000;
-    }
-
-    .tg-overlay {
-      background: linear-gradient(135deg, rgba(0, 0, 0, 0.78) 0%, rgba(23, 23, 23, 0.60) 100%);
-    }
-
-    .thumb-grid .thumbWrapper {
-      width: 100%;
-      height: 400px;
-    }
-
-    /******** DEMO SWITCHER *******/
-    #customize {
-      color: white;
-      text-align: right;
-      position: relative;
-      margin: auto;
-      width: 100%;
-      margin-bottom: 120px;
-    }
-
-    #customize input,
-    #customize select {
-      font-size: 15px;
-      margin: 3px;
-      padding: 4px 4px 4px 8px;
-      border: 1px solid rgba(38, 41, 43, 0.44);
-      color: #fff;
-      background-color: rgba(0, 0, 0, 0.2);
-      border-radius: 4px;
-    }
-
-    #customize select {
-      margin: 0;
-      outline: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      -ms-appearance: none;
-      -o-appearance: none;
-      appearance: none;
-      vertical-align: middle;
-    }
-
-    #customize label {
-      font-size: 13px;
-      margin: 3px 0;
-      padding: 3px 10px 3px 0;
-      /*width: 160px;*/
-      display: inline-block;
-      text-align: left;
-      text-transform: uppercase;
-      font-weight: 500;
-    }
-
-    .thumbGallery {
-      display: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/gallery-nature.css">
+    <link rel="stylesheet" href="./css/nature.css">
+    <script src="./js/gallery-nature.js" defer></script>
 </head>
 
 <body>
+    <div id="gallery"></div>
+    <script>
+        window.addEventListener('load', function () {
 
-  <article id="wrapper">
-    <h1>柚子的照片墙</h1>
+            // Get reference of gallery container
+            var elementRef = document.getElementById('gallery');
 
-    <section class="content">
+            // Init gallery according to wanted format
+            var gallery = new NaturalGallery.Natural(elementRef); // or
+            // var gallery = new NaturalGallery.Masonry(elementRef); // or
+            // var gallery = new NaturalGallery.Square(elementRef); // or
+            // var gallery = new NaturalGallery.ResponsiveSquare(elementRef);
 
-      <div id="thumbGallery" class="thumbGallery" data-nav_effect="slide_horizontal" data-nav_delay="100"
-        data-nav_timing="1000" data-nav_show="true" data-nav_delay_inverse="1" data-nav_pagination="12"
-        data-full_inline="false" data-full_inline_height="600" data-layout="grid" data-layout_cols="3"
-        data-layout_margin="10" data-layout_has_caption="true" data-gallery_cover="true" data-gallery_effect="slide_horizontal"
-        data-gallery_fullscreenw="90%" data-gallery_fullscreenh="100%">
-        
-      </div>
+            var items = [
+                {
+                    thumbnailSrc: './img/1.jpg', // link to thumbnail image
+                    enlargedSrc: './img/1.jpg', // link to enlarged image
+                    enlargedWidth: 100,
+                    enlargedHeight: 100,
+                    title: 'test', // Title for the label or button
+                    link: 'link', // Link, transforms label into button
+                    linkTarget: '_blank', // _blank | _top | _self | _parent
+                    color: 'red' // HEX color for background before image display
+                }
+            ];
 
-    </section>
+            // Set the entire collection
+            gallery.setItems(items);
 
-  </article>
-
-  <script>
-
-
-    jQuery.getJSON('./data.json', function (result) {
-      result.forEach(function (item, i) {
-        var row = `<img src=${item.url} data-highres=${item.url} data-caption=${item.desc}/>`;
-        $('#thumbGallery').append(row);
-      });
-      /* Initialize the mbGallery */
-      var myGallery = jQuery("#thumbGallery").mbGallery();
-
-      /* customizer */
-      jQuery("#effect").on("change", function () {
-        var x = $(this).val();
-        myGallery.data("nav_effect", x);
-
-      });
-
-      jQuery("#delay").on("change", function () {
-        var x = parseFloat($(this).val());
-        myGallery.data("nav_delay", x);
-      });
-
-      jQuery("#timing").on("change", function () {
-        var x = parseFloat($(this).val());
-        myGallery.data("nav_timing", x);
-      });
-
-      if (jQuery.isMobile) {
-        jQuery("body").css({ marginBottom: 140 })
-      }
-    });
+            // Increment an existing collection.
+            // gallery.addItems(itemsSet1); // the first call as the same effect as setItems()
+            // gallery.addItems(itemsSet2);
+            // gallery.addItems(itemsSet3);
+        });
 
 
-  </script>
+    </script>
 </body>
 
 </html>
