--- a/source/gallery/index.html
+++ b/source/gallery/index.html
@@ -73,6 +73,7 @@
             <img src="" alt="Gallery picture">
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         //Lits of all pictures
         var picture_list = [
