--- a/source/gallery/index.html
+++ b/source/gallery/index.html
@@ -77,11 +77,11 @@
     <script>
         //Lits of all pictures
         var picture_list = [
-            './images/aiting1.png',
-            './images/aiting4.png',
-            './images/chatRoom2.png',
-            './images/homeAndRoom.png',
-            './images/faceAndEmoj.png',
+            '/images/aiting1.png',
+            '/images/aiting4.png',
+            '/images/chatRoom2.png',
+            '/images/homeAndRoom.png',
+            '/images/faceAndEmoj.png',
         ];
         //Gallery selector
         $img_gallery = $('.gallery-inner');
