--- a/source/home/index.html
+++ b/source/home/index.html
@@ -9,9 +9,9 @@
 	<meta name="author" content="Pieter Robberechts">
 
 	<!-- Touch icons for android and iOS (Bookmark icons) -->
-  <link rel="shortcut icon" href="https://probberechts.github.io/hexo-theme-cactus/images/icons/favicon.ico">
+  <!-- <link rel="shortcut icon" href="https://probberechts.github.io/hexo-theme-cactus/images/icons/favicon.ico">
   <link rel="icon" type="image/png" href="https://probberechts.github.io/hexo-theme-cactus/images/icons/favicon-192x192.png" sizes="192x192">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://probberechts.github.io/hexo-theme-cactus/images/icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://probberechts.github.io/hexo-theme-cactus/images/icons/apple-touch-icon.png"> -->
 
   <title>柚子的主页</title>
 	<link rel="stylesheet" href="./css/main.css">
