--- a/source/gallery/index.html
+++ b/source/gallery/index.html
@@ -16,16 +16,13 @@
         }
 
         .gallery .gallery-inner img {
-            border: 2px solid #fff;
-            margin: 3px;
-            border-radius: 0px;
-            max-height: 150px;
-            box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.24);
             cursor: pointer;
             transition: 0.2s all;
+            height: calc(100% - 30px);
+            width: 100%;
         }
 
-        .gallery .gallery-inner img:hover {
+        .gallery .gallery-inner .card:hover {
             transform: scale(1.03);
             box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
         }
@@ -39,51 +36,64 @@
             z-index: 10;
             background-color: rgba(64, 64, 64, 0.8);
             padding: 20px;
+            transition: all .5s;
         }
 
         .gallery .fullscreen-picture img {
             display: block;
             margin: auto;
             height: 100%;
-            border: 1px solid #fff;
             box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.24);
             z-index: 11;
+            transition: all .5s;
         }
 
         .d-none {
             display: none !important;
         }
 
-        .link a {
-            color: #fff;
+        .card a {
+            height: 30px;
             display: inline-block;
+            line-height: 30px;
+            color: #fff;
             text-decoration: none;
-            margin: 5px;
-            border: 1px solid #fff;
-            padding: 5px;
-            border-radius: 5px;
-            box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
+            font-size: 12px;
+            font-family: monospace;
         }
 
-        .link a:hover{
-            background: #fff;
+        .card a:hover {
             color: #404040;
+            text-decoration: underline !important;
         }
 
-        h1{
+        h1 {
             text-align: center;
             color: #fff;
         }
 
-        h2{
+        h2 {
             color: #fff;
+        }
+
+        .card {
+            display: inline-block;
+            width: 150px;
+            height: 200px;
+            background: #db4a79;
+            margin: 5px;
+            text-align: center;
+            padding: 5px;
+            transition: all .5s;
+        }
+
+        .card:hover {
+            background: #e66690;
         }
     </style>
 </head>
 
 <body>
-    <h1>My Gallery from Project or Life</h1>
-    <h2>Gallery</h2>
     <div class="gallery">
         <div class="gallery-inner">
             <!-- Pictures will load here -->
@@ -92,20 +102,18 @@
             <img src="" alt="Gallery picture">
         </div>
     </div>
-    <h2>Links to view detail</h2>
-    <div class="link"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
         //Lits of all pictures
         var picture_list = [
-            '/images/aiting1.png',
-            '/images/aiting4.png',
-            '/images/chatRoom2.png',
-            '/images/homeAndRoom.png',
-            '/images/faceAndEmoj.png',
-            '/images/pomeloEditor.png',
-            '/images/pomeloEngine.png',
-            '/images/mrui.png',
+            'https://renhongl.github.io/images/aiting1.png',
+            'https://renhongl.github.io/images/aiting4.png',
+            'https://renhongl.github.io/images/chatRoom2.png',
+            'https://renhongl.github.io/images/homeAndRoom.png',
+            'https://renhongl.github.io/images/faceAndEmoj.png',
+            'https://renhongl.github.io/images/pomeloEditor.png',
+            'https://renhongl.github.io/images/pomeloEngine.png',
+            'https://renhongl.github.io/images/mrui.png',
         ];
         var title_list = [
             'Music Player',
@@ -128,19 +136,17 @@
             'https://renhongl.github.io/mr/'
         ]
 
-        var $link = $('.link');
-        for (var i = 0; i < picture_list.length; i++) {
-            var a = `<a target="_blank" href="${link_list[i]}">${title_list[i]}</a>`;
-            $link.append(a);
-        }
-
         //Gallery selector
         $img_gallery = $('.gallery-inner');
         //Put all pictures in the DOM
         for (var i = 0; i < picture_list.length; i++) {
+            var $card = $('<div>').addClass('card');
             var img = picture_list[i];
-            var $img_nodes = "<img src='" + img + "' alt='Gallery picture' title='" + title_list[i] + "'>";
-            $img_gallery.append($img_nodes);
+            var $img_nodes = "<img src='" + img + "' alt='Gallery picture' title='Full Screen'>";
+            var a = `<a target="_blank" href="${link_list[i]}" title="Go to home page">${title_list[i]}</a>`;
+            $card.append($img_nodes);
+            $card.append(a);
+            $img_gallery.append($card);
         }
         //Fullscreen listener when click the img
         $img_gallery.find('img').click(function () {
