--- a/source/source/drawer/index.html
+++ b/source/source/drawer/index.html
@@ -19,19 +19,7 @@
 </head>
 
 <body>
-    <script src="./drawer.js"></script>
-    <script>
-        new Drawer({
-            container: document.body,
-            width: document.body.clientWidth,
-            height: document.body.clientHeight,
-            loop: 3000,
-            size: 1,
-            speed: 20,
-            color: '#000000',
-            toolBar: true,
-        });
-    </script>
-</body>
+    
+<script type="text/javascript" src="bundle.js"></script></body>
 
 </html>
